# SpotifyToYouTubeMusic

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
adaptor/: local_storage.py
dao/spotify/: spotify_playlist_dao.py  spotify_playlist_id.py  spotify_track.py
dao/youtube/: youtube_playlist_dao.py  youtube_track_id.py
model/: Migrator.py  artist.py  playlist.py  track.py
model/migrator/: migrator_data.py  migrator_job.py
model/spotify/: spotify_playlist.py  spotify_user_playlists.py
model/youtube/: youtube_playlist.py
service/: migrator_service.py  spotify_music_service.py  youtube_music_service.py
tests/adaptor/: local_storage_test.py
tests/dao/: youtube_playlist_dao_test.py
tests/model/: artist_test.py  migrator_test.py  playlist_test.py  track_test.py
tests/model/migrator/: migrator_data_test.py  migrator_job_test.py
tests/model/spotify/: spotify_playlist_test.py  spotify_user_playlists_test.py
tests/model/youtube/: youtube_playlist_test.py
tests/service/: migrator_service_test.py  spotify_music_service_test.py
