[tool.poetry]
name = "spotify-to-youtube-music"
version = "0.1.0"
description = "Spotify to YouTube Music"
authors = ["Kevin J Nguyen <kevinjnguyen2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
pytype = "^2024.1.24"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytype]
inputs = ['model']

[tool.black]
line-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
